# explora

./: Cargo.toml  LICENSE  README.md  dist-workspace.toml
.github/workflows/: release.yml
src/: exit.rs  lib.rs  main.rs  themes.rs  ui.rs
