[package]
name = "explora"
version = "0.1.0"
edition = "2024"
license = "MIT"
license-file = "LICENSE"
repository = "https://github.com/kaden126/explora/tree/master"
description = "A small, friendly, terminal file explorer written in rust."

[dependencies]
ratatui = "0.30.0"
crossterm = "0.29.0"
anyhow = "1.0.102"
infer = "0.19.0"
